show list of todays entries & autologin, jar artifact